--- a/Scrabble-Computer-vision/app/src/main/res/values/strings.xml
+++ b/Scrabble-Computer-vision/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="picture_confirm">Confirm Picture</string>
+    <string name="picture_confirm">Confirm Letters</string>
 </resources>
