--- a/Scrabble-Computer-vision/app/src/main/res/values/strings.xml
+++ b/Scrabble-Computer-vision/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="generate_button">Generate Words</string>
     <string name="scanned_title">Scanned Letters</string>
     <string name="retake_button">Retake Photo</string>
+    <string name="change_letters">Change Letters</string>
+    <string name="done_button">Done</string>
+    <string name="words_title">Word List</string>
 </resources>
